# 4DA

./: .clinerules  .env.local.example  .gitattributes  .gitignore  .mcp.json  .vercelignore  AGENTS.md  ASCENT-PLAN.md  BATTLE-PLAN.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  FORTIFICATION-PLAN.md  INTELLIGENCE-CONSOLE-PLAN.md  LAUNCH-CHECKLIST.md  LICENSE  LINUX.md  MASTER-PLAN.md  NETWORK.md  NOTICE  PLAN-CROSS-PLATFORM-HARDENING.md  PLAN-HARDENING.md  PLAN-OPTIMAL-4DA.md  PLAN-SECURITY-KEYMANAGEMENT.md  PLAN.md  PRE-LAUNCH-PLAN.md  README.md  SECURITY.md  TRADEMARKS.md  TRAJECTORY-PLAN.md  eslint.config.js  index.html  knip.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+3 more)
crates-placeholder/: Cargo.toml  README.md
crates-placeholder/src/: lib.rs
fourda-infer-proto/: Cargo.toml
fourda-infer-proto/src/: lib.rs
relay/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
relay/.github/workflows/: ci.yml
relay/src/: auth.rs  cleanup.rs  clients.rs  db.rs  entries.rs  error.rs  main.rs  rate_limit.rs  stream.rs  tests.rs
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  deny.toml  desktop-template.desktop  rust-toolchain.toml  scoring_dsl.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/benches/: db_scale.rs
src-tauri/bindings/: AlertEvidence.ts  AlertPolicy.ts  AlertUrgency.ts  CalibrationResult.ts  Capability.ts  CapabilityState.ts  CapabilitySummary.ts  Channel.ts  ChannelChangelog.ts  ChannelFreshness.ts  ChannelRender.ts  ChannelSourceMatch.ts  ChannelStatus.ts  ChannelSummary.ts  ColorWeight.ts  CurveDrift.ts  CurveFitReport.ts  CurveFitSummary.ts  CurveStatus.ts  DecisionDetail.ts  DecisionVote.ts  DomainPrecision.ts  ExportManifest.ts  ExtractionReport.ts  ExtractionStatus.ts  FalsePositiveAnalysis.ts  FeedbackBucket.ts  GenerationOutcome.ts  IntelligenceMetrics.ts  IntelligencePack.ts  MemberDetection.ts  MotionProfile.ts  MuseAddResult.ts  MuseGeneration.ts  MuseMediaType.ts  MusePack.ts  MusePackSource.ts  MusePackType.ts  NotificationSummary.ts  NotificationTypeCount.ts  (+40 more)
src-tauri/bindings/bindings/: Action.ts  ActiveConcern.ts  AdvisorSignal.ts  AgentMemoryEntry.ts  AgentSessionBrief.ts  AlignmentConflict.ts  AlignmentResult.ts  AnalysisState.ts  AnalysisStatus.ts  ArtifactKind.ts  AuditEntry.ts  AuditSummary.ts  AutophagyCycleResult.ts  AutophagyStatus.ts  BlindSpotAssessment.ts  BlindSpotRecommendation.ts  BlindSpotReport.ts  CalibrationInsight.ts  CalibrationSprintCard.ts  CalibrationSprintStatus.ts  CommitmentContract.ts  CompoundAdvantageScore.ts  Confidence.ts  ConfidenceProvenance.ts  ContextFile.ts  ContractStatus.ts  CrossTeamCorrelation.ts  DataFreshness.ts  DataHealth.ts  DbStats.ts  DecisionStatus.ts  DecisionSummary.ts  DecisionType.ts  DecisionWindow.ts  DelegationFactors.ts  DelegationRec.ts  DelegationScore.ts  DepAssessment.ts  DeveloperDecision.ts  DisagreementKind.ts  (+39 more)
src-tauri/capabilities/: briefing-window.json  default.json  notification.json
src-tauri/data/: curated_feeds.json
src-tauri/examples/: test_ocr.rs  test_ocr_full.rs  test_ocr_text.rs
src-tauri/fourda-macros/: Cargo.toml
src-tauri/fourda-macros/src/: confirmation_gate.rs  lib.rs  score_component.rs  scoring_builder.rs  threshold.rs
src-tauri/scoring/: pipeline.scoring
src-tauri/src/: accuracy.rs  ace_commands.rs  achievement_commands.rs  achievement_commands_stub.rs  achievement_definitions.rs  achievement_definitions_stub.rs  achievement_engine.rs  achievement_engine_stub.rs  adversarial.rs  agent_brief.rs  agent_memory.rs  ai_costs.rs  alert_triage.rs  analysis.rs  analysis_dedup.rs  analysis_deep_scan.rs  analysis_deep_scan_tests.rs  analysis_narration.rs  analysis_rerank.rs  analysis_status.rs  analysis_status_tests.rs  analysis_tests.rs  anomaly.rs  app_setup.rs  attention.rs  audit.rs  audit_stub.rs  audit_tests.rs  autophagy_commands.rs  autophagy_pulse.rs  awe_autonomous.rs  awe_bridge.rs  awe_commands.rs  awe_events.rs  awe_source_mining.rs  awe_spine.rs  awe_synthesis.rs  blind_spots.rs  boot_context.rs  briefing_dedupe.rs  (+290 more)
src-tauri/src/ace/: anomaly.rs  behavior.rs  confidence.rs  context.rs  db.rs  embedding.rs  git.rs  health.rs  integration_tests.rs  mod.rs  readme_indexing.rs  scanner.rs  topic_embeddings.rs  validation.rs  watcher.rs
src-tauri/src/ace_commands/: accuracy.rs  anomalies.rs  context.rs  dependencies.rs  embeddings.rs  interactions.rs  mod.rs  scanning.rs  watcher.rs
src-tauri/src/autophagy/: anti_patterns.rs  archetype.rs  archetype_tests.rs  calibration.rs  calibration_analysis.rs  calibration_analysis_tests.rs  decision_outcomes.rs  digest.rs  mod.rs  source_autopsy.rs  topic_decay.rs
src-tauri/src/briefing_groundedness_nlp/: mod.rs
src-tauri/src/content_graph/: clustering.rs
src-tauri/src/content_personalization/: cache.rs  commands.rs  context.rs  engine_scoring.rs  llm_engine.rs  mirror_blocks.rs  mod.rs  nollm_engine.rs  template_conditionals.rs  template_processor.rs  template_resolver.rs  temporal.rs
src-tauri/src/db/: cache.rs  channels.rs  concurrency_tests.rs  dep_snapshots.rs  dependencies.rs  encryption.rs  history.rs  hybrid_search.rs  llm_judgments.rs  migrations.rs  mod.rs  osv_advisories.rs  scoring_queries.rs  source_item_deps.rs  sources.rs  stress_tests.rs
src-tauri/src/decision_advantage/: compound_score.rs  mod.rs  scoring_boost.rs  windows.rs  windows_tests.rs
src-tauri/src/embeddings_providers/: fastembed.rs
src-tauri/src/evidence/: materializer.rs  mod.rs  tests.rs  types.rs  validate.rs
src-tauri/src/extractors/: archive.rs  audio.rs  image.rs  mod.rs  office.rs  pdf.rs
src-tauri/src/glyph_integration/: mcp_envelope.rs  migration.rs  mod.rs  sqlite_audit_sink.rs  wisdom_bridge.rs
src-tauri/src/model_eval/: runner.rs
src-tauri/src/muse/: db.rs  extract.rs  image_analysis.rs  influence.rs  mod.rs  pack.rs
src-tauri/tests/: migration_tests.rs  pipeline_integration.rs  source_resilience.rs  sql_checker.rs  stack_simulation.rs  victauri_dogfood.rs
src-tauri/windows/: hooks.nsh
(+1929 files in other folders)
