[package]
name = "fourda-relay"
version = "0.1.0"
edition = "2021"
description = "4DA Team Relay — encrypted metadata sync server"
license = "FSL-1.1-Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
