[package]
name = "fourda"
version = "1.0.0"
description = "4DA - All signal. No feed."
authors = ["4DA Systems"]
license = "FSL-1.1-Apache-2.0"
edition = "2021"
default-run = "fourda"

[lib]
name = "fourda_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }

# Async runtime (specific features instead of "full" to reduce binary ~500KB)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "net", "io-util", "signal"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# URL encoding
urlencoding = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "8"

# HTML parsing (for HN content scraping)
scraper = "0.23"

# Embeddings (local MiniLM model)
# fastembed = "4"  # DISABLED: ONNX linking issues on Windows - using OpenAI embeddings only

# Thread-safe state
once_cell = "1"
parking_lot = "0.12"

# Database (sqlite + vector search)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities (for home dir resolution)
dirs = "5"

# Async trait support
async-trait = "0.1"

# Base64 encoding/decoding (for GitHub README)
base64 = "0.22"

# Phase 1: Multi-format document extraction (basic support)
# Note: Using pure Rust alternatives instead of C library bindings
pdf-extract = "0.7"          # PDF text extraction
lopdf = "0.32"               # PDF manipulation
docx-rs = "0.4"              # Word document parsing
calamine = "0.25"            # Excel spreadsheet parsing
image = "0.25"               # Image loading/preprocessing (Month 2 - OCR)
ocrs = "0.12"               # Pure Rust OCR engine
rten = "0.24"               # Model loading for ocrs (text-detection.rten, text-recognition.rten)
# whisper-rs = "0.14"       # DISABLED: Requires vcpkg/system deps - audio.rs stubbed
zip = "0.6"                  # ZIP archive extraction
tar = "0.4"                  # TAR archive extraction
flate2 = "1.0"               # Gzip compression/decompression

# Compile-time scoring macros
fourda-macros = { path = "fourda-macros" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
tauri-plugin-deep-link = "2.4.7"

[[bin]]
name = "4da"
path = "src/bin/cli.rs"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "db_scale"
harness = false

[features]
default = []
void-universe = []
sql-check = []
calibrated-sim = []
generate-sim-fixtures = []
experimental = []

[[test]]
name = "sql_checker"
required-features = ["sql-check"]

[profile.release]
strip = true
lto = true
codegen-units = 1
