[package]
name = "fourda"
version = "1.0.0"
description = "4DA - All signal. No feed."
authors = ["4DA Systems Pty Ltd"]
license = "FSL-1.1-Apache-2.0"
edition = "2021"
default-run = "fourda"

[lib]
name = "fourda_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat"] }

# Async runtime (specific features instead of "full" to reduce binary ~500KB)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "net", "io-util", "signal", "process"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Signal Terminal HTTP server
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["cors"] }

# URL encoding
urlencoding = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "8"

# HTML parsing (for HN content scraping)
scraper = "0.23"

# Embeddings (local MiniLM model)
# fastembed = "4"  # DISABLED: ONNX linking issues on Windows - using OpenAI embeddings only

# Thread-safe state
once_cell = "1"
parking_lot = "0.12"

# Database (sqlite + vector search)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Hashing for deduplication
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities (for home dir resolution)
dirs = "5"

# Async trait support
async-trait = "0.1"

# Email delivery (digest emails via user's SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }

# Base64 encoding/decoding (for GitHub README)
base64 = "0.22"

# Phase 1: Multi-format document extraction (basic support)
# Note: Using pure Rust alternatives instead of C library bindings
pdf-extract = "0.7"          # PDF text extraction
lopdf = "0.32"               # PDF manipulation
docx-rs = "0.4"              # Word document parsing
calamine = "0.25"            # Excel spreadsheet parsing
image = "0.25"                                    # Image analysis (MUSE creative extraction + OCR)
ocrs = { version = "0.12", optional = true }     # Pure Rust OCR engine
rten = { version = "0.24", optional = true }     # Model loading for ocrs (text-detection.rten, text-recognition.rten)
# whisper-rs = "0.14"       # DISABLED: Requires vcpkg/system deps - audio.rs stubbed
zip = { version = "0.6", optional = true }        # ZIP archive extraction
tar = { version = "0.4", optional = true }        # TAR archive extraction
flate2 = { version = "1.0", optional = true }     # Gzip compression/decompression

# Semantic version parsing (CVE version range matching)
semver = "1"

# System startup (launch at login)
tauri-plugin-autostart = "2"

# Compile-time scoring macros
fourda-macros = { path = "fourda-macros" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
tauri-plugin-deep-link = "2.4.7"

# SSO cryptographic verification (enterprise feature)
jsonwebtoken = { version = "9", optional = true }
rsa = { version = "0.9", features = ["sha2"], optional = true }
pkcs8 = { version = "0.10", features = ["pem"], optional = true }
x509-cert = { version = "0.2", optional = true }

# Team sync — E2E encrypted metadata relay (AD-023)
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
uhlc = "0.7"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
zeroize = "1"
keyring = { version = "3", features = ["sync-secret-service", "linux-native"] }

[[bin]]
name = "4da"
path = "src/bin/cli.rs"

# OCR test utilities live in examples/ to prevent Tauri from bundling them
# Run with: cargo run --example test_ocr_full --features ocr
[[example]]
name = "test_ocr_full"
path = "examples/test_ocr_full.rs"
required-features = ["ocr"]

[[example]]
name = "test_ocr"
path = "examples/test_ocr.rs"
required-features = ["ocr"]

[[example]]
name = "test_ocr_text"
path = "examples/test_ocr_text.rs"
required-features = ["ocr"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "db_scale"
harness = false

[features]
default = []
ocr = ["dep:ocrs", "dep:rten"]
archive = ["dep:zip", "dep:tar", "dep:flate2"]
void-universe = []
sql-check = []
experimental = []
# Feature-gated command groups (ghost commands with zero frontend callers)
team-sync = []       # Team Sync, Intelligence, Monitoring (AD-023) — 17 commands
enterprise = ["dep:jsonwebtoken", "dep:rsa", "dep:pkcs8", "dep:x509-cert"]      # Audit, Webhooks, Organizations, Analytics, SSO crypto — 15 commands
game-engine = []     # GAME Engine state/achievements/streaks — 3 commands
streets-execution = [] # STREETS command execution (not content) — 3 commands

[[test]]
name = "sql_checker"
required-features = ["sql-check"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Deny dangerous patterns
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
# Pedantic — good code practices
pedantic = { level = "warn", priority = -1 }
# Allow specific pedantic lints that are too noisy for this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
similar_names = "allow"
unreadable_literal = "allow"
# These are valid patterns in our codebase
wildcard_imports = "allow"
enum_glob_use = "allow"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
